<resources>


    <string name="app_name">LoLTimer</string>
    <string name="title_app">LoLTimer</string>


    <string name="settings">SETTINGS</string>
    <string name="commands">Commands</string>
    <string name="command">Command</string>
    <string name="inicial_commands_text">Command: Speak Your Command</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="givePermission">Give Permission</string>
    <string name="start">Start</string>
    <string name="tipStart">Speak your command, </string>
    <string name="like_for_example">like for example:</string>
    <string name="tipEnd">Hint: Speak slowly between each word or change recognition language in settings.</string>
    <string name="tipCustomizeCommands">You can create custom commands in commands session and change language in settings session.</string>
    <string name="summonerName">Summoner Name:</string>
    <string name="error">Incorrect Summoner Or Region</string>
    <string name="custom_commands">CREATE CUSTOM COMMANDS</string>
    <string name="custom_commands_type">Type Your Command</string>
    <string name="command_created">Command Created</string>
    <string name="list_commands">COMMAND LIST</string>
    <string name="explanation">To activate say lane and spell or spell and lane, for example: </string>
    <string name="normal_timer">Normal Timer </string>
    <string name="explanation_normal_timer">To activate say a number that represents the seconds, along with the letter S, for example: </string>
    <string name="explanation_boots">Activation is done by clicking or using the word Boot or Boots, along with lane, for example: </string>
    <string name="explanation_kindred">To activate say the letter "K" along with a number that represents the seconds, for example: </string>
    <string name="explanation_anivia">To activate say: </string>
    <string name="create">CREATE</string>
    <string name="custom_commands_existings">Existing Custom Commands</string>
    <string name="vibrate_on_create">Vibrate when creating a command</string>
    <string name="vibrate_on_end">Vibrate when ending a command</string>
    <string name="command_exist">The command already exists</string>
    <string name="speak_end">Speak at the end of the command</string>
    <string name="recognition_language">Recognition language</string>
    <string name="language">Language</string>
    <string name="or">or</string>
    <string name="activate_zhonyas">To activate say the letter "Z" or "ZY" or "ZH" along with lane , for example:</string>
    <string name="mix_commands">You can mix commands from different languages</string>
    <string name="putSummonerName">Put Your Summoner Name</string>
    <string name="region">Region:</string>

    <string name="explanation_rune">Activation is done by clicking or using the word Rune, along with lane, for example: </string>
    <string name="rune">Rune</string>
    <string name="goOffline">Start Offline</string>
    <string name="error_conection">Connection Error</string>
    <string name="change">Change</string>
    <string name="change_summoner_name">Change Summoner Name</string>
    <string name="with_rune">With the rune:</string>

</resources>