<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timersContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/inicial_commands_text"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutPermission"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissionDenied"
            android:textSize="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal">

        </TextView>
        <Button
            android:id="@+id/btnPermission"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20dp"
            android:backgroundTint="@color/greenTime"
            android:layout_gravity="center"
            android:text="@string/givePermission"
            android:textColor="@color/black"
            android:gravity="center">

        </Button>

    </LinearLayout>
    <TextView
        android:id="@+id/tipText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal">

    </TextView>

</LinearLayout>