<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewCreateCustomCommands"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/timer_sand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/aleobold"
            android:gravity="center"
            android:text="@string/title_app"
            android:textColor="@color/black"

            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageTime" />

        <TextView
            android:id="@+id/textTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleobold"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="-6"
            android:shadowDy="6"
            android:shadowRadius="9"
            android:text="@string/title_app"
            android:textColor="@color/greenTime"
            android:textSize="40dp"

            app:layout_constraintTop_toBottomOf="@+id/imageTime"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/containerCustomCommands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/custom_commands"
                android:typeface="monospace"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/command"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold">

                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/customOption"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:src="@drawable/top">

                        </ImageView>

                        <Spinner
                            android:id="@+id/spinnerLane"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="10dp"

                            android:background="@android:drawable/btn_dropdown"
                            android:backgroundTint="@color/greenTime"
                            android:backgroundTintMode="multiply"
                            android:popupBackground="@color/greenTime"
                            android:spinnerMode="dropdown"
                            android:textAlignment="center"
                            android:theme="@style/spinnerTheme" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/custom_commands_type"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold">

                    </TextView>


                    <EditText
                        android:id="@+id/editTextCreateCommand"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/black"
                        android:background="@drawable/edit_text_style"
                        android:layout_column="1"
                        android:layout_row="1"
                        android:ems="10"
                        android:textSize="25dp"
                        >

                    </EditText>

                    <Button
                        android:id="@+id/btnCreateCommand"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/greenTime"
                        android:text="@string/create"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="30dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="40dp">

                    </Button>


                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/custom_commands_existings"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:typeface="monospace"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:id="@+id/containerCustomCommandsExistings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical" />





            </LinearLayout>
            </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>