<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"

            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"

            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/custom_commands"
                        android:textColor="@color/black"

                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:typeface="monospace">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_marginLeft="1dp"
                        android:text="@string/custom_commands"
                        android:textColor="@color/greenTime"

                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:typeface="monospace">

                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:id="@+id/btnCreateCommandInSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="40dp"
                    android:backgroundTint="@color/greenTime"
                    android:text="@string/create"

                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold">

                </Button>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:backgroundTint="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="7dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/settings"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:typeface="monospace">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center"
                        android:text="@string/settings"
                        android:textColor="@color/greenTime"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:typeface="monospace">

                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="15dp">



                        <TextView
                            android:layout_width="220dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/recognition_language"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:typeface="monospace">

                        </TextView>
                        <Spinner
                            android:id="@+id/spinnerLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:background="@android:drawable/btn_dropdown"
                            android:backgroundTint="@color/greenTime"
                            android:backgroundTintMode="multiply"
                            android:popupBackground="@color/greenTime"
                            android:spinnerMode="dropdown"
                            android:textAlignment="center"
                            android:theme="@style/spinnerTheme" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="15dp">



                        <TextView
                            android:layout_width="330dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/vibrate_on_end"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:typeface="monospace">

                        </TextView>
                        <Switch
                            android:id="@+id/switchVibrateOnFinish"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            >

                        </Switch>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="15dp">



                        <TextView
                            android:layout_width="330dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/vibrate_on_create"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:typeface="monospace">

                        </TextView>
                        <Switch
                            android:id="@+id/switchVibrateOnCreate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            >

                        </Switch>



                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="15dp">



                        <TextView
                            android:layout_width="330dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/speak_end"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:typeface="monospace">

                        </TextView>
                        <Switch
                            android:id="@+id/switchSpeakOnEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            >

                        </Switch>



                    </LinearLayout>





                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>